--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   smooth_page_indicator: ^2.0.1
   shared_preferences: ^2.0.15
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -49,6 +50,8 @@ dependencies:
   permission_handler: ^11.3.0
   # Network connectivity banner
   connectivity_plus: ^5.0.2
+   # Google Sign-In
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
